--- a/MatchProject/index.html
+++ b/MatchProject/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="css/idangerous.swiper.css">
         <link rel="stylesheet" type="text/css" href="css/stylesheet.css" >
-        <title>Framework-free-single-page-app by coderLMN</title>
+        <title>比赛报名</title>
     </head>
 
     <body onhashchange="miniSPA.changeUrl();" onload="loaded()">
