--- a/indexTest.html
+++ b/indexTest.html
@@ -3,10 +3,10 @@
 <head>
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
 </head>
-<body style="background-color:#ccc; margin: 0px;height: 100%; font-family: sans-serif;font-size: 10px">
+<body style="background-color:#fff; margin: 20px;height: 100%; font-family: sans-serif;font-size: 10px">
 
 <Button id="111">aaaaa</Button>
-
+<Button id="1222">bbbb</Button>
 <script>
    var btn = document.getElementById("111");
    btn.disabled = true;
