--- a/indexTest.html
+++ b/indexTest.html
@@ -8,9 +8,21 @@
 <Button id="111">aaaaa</Button>
 <Button id="1222">bbbb</Button>
 <script>
-   var btn = document.getElementById("111");
-   btn.disabled = true;
+	 function loadURL(url) {
+                    var iFrame;
+                    iFrame = document.createElement("iframe");
+                    iFrame.setAttribute("src", url);
+                    iFrame.setAttribute("style", "display:none;");
+                    iFrame.setAttribute("height", "0px");
+                    iFrame.setAttribute("width", "0px");
+                    iFrame.setAttribute("frameborder", "0");
+                    document.body.appendChild(iFrame);
+                    // 发起请求后这个iFrame就没用了，所以把它从dom上移除掉
+                    iFrame.parentNode.removeChild(iFrame);
+                    iFrame = null;
+                }
 
+      loadURL("gms://hideNav");
 </script>
 </body>
 </html>
