--- a/test/aa.html
+++ b/test/aa.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <input type="file" id="file" name="" />
+    <input style="margin-top: 60px" type="file" id="file" name="" />
     <div id="image" style="width:390px;height:280px; background:#CCCCCC; float:left;">
         <img src="" />
     </div>
