--- a/gms/help/helpCar.html
+++ b/gms/help/helpCar.html
@@ -15,69 +15,7 @@
 		<script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 		<!-- 自定义js文件 -->
 		<title></title>
-		<style type="text/css">
-			.notice-content {
-				display: none;
-			}
-			
-			#contentWrapper {
-				padding: 0 15px;
-			}
-			.notice-title{
-				height: 60px;
-				border-bottom: 1px solid rgb(237,237,237);
-				line-height: 60px;
-				color: rgb(50,50,50);
-				font-size: 16px;
-				overflow: hidden;
-			}
-			.notice-title span{
-				display: block;
-			}
-			.notice-content ul{
-				padding: 10px 0;
-			}
-			.notice-content li{
-				position: relative;
-				padding-left: 10px;
-				line-height: 24px;
-				color: rgb(127,127,127);
-				font-size: 14px;
-			}
-			.notice-content li::after{
-				content: '';
-				position: absolute;
-				left: 0;
-				top: 11px;
-				width: 2px;
-				height: 2px;
-				background-color: rgb(127,127,127);
-				-webkit-border-radius: 50%;
-				border-radius: 50%;
-			/*	-webkit-transform: translateY(-50%);
-				transform: translateY(-50%);*/
-			}
-			.notice-title{
-				position: relative;
-			}
-			.notice-title::after{
-				content: '';
-				position: absolute;
-				top: 50%;
-				right: 0;
-				width: 30px;
-				height: 30px;
-				margin-top: -15px;
-				background: url(images/help-icon.png) no-repeat center/cover;
-				transform-origin: center;
-				-webkit-transition: transform .5s;
-				transition: transform .5s;
-			}
-			.notice-title.active::after{
-				-webkit-transform: rotateZ(-90deg);
-				transform: rotateZ(-90deg);
-			}
-		</style>
+		<link rel="stylesheet" href="css/main.css" />
 	</head>
 
 	<body class="">
@@ -89,11 +27,11 @@
 					</div>
 					<div class="notice-content">
 						<ul>
-							<li>请确保使用的是《机动车登记证》，不是行驶证、身份证。</li>
-							<li>请对着证件内页（有车主信息和车辆信息的两页）拍照，不要对着封面拍照。</li>
-							<li>请确保您提交的拍照照片清晰，模糊的照片会影响识别效果。</li>
-							<li>拍照时请留意对焦情况，如果自动对焦效果不理想，请尝试手动触摸对焦的方式进行调整。</li>
-							<li>拍照时请确保机动车登记证信息页，打开平铺并完整出现在拍摄边界提示框内。</li>
+							<li>请确保使用的是<span>《机动车登记证》</span>，不是行驶证、身份证。</li>
+							<li>请对着<span>证件内页</span>（有车主信息和车辆信息的两页）拍照，不要对着封面拍照。</li>
+							<li>请确保您提交的<span>拍照照片清晰</span>，模糊的照片会影响识别效果。</li>
+							<li>拍照时请留意对焦情况，如果自动对焦效果不理想，请尝试<span>手动触摸对焦</span>的方式进行调整。</li>
+							<li>拍照时请确保机动车登记证信息页，<span>打开平铺</span>并完整出现在拍摄边界提示框内。</li>
 						</ul>
 					</div>
 				</div>
@@ -103,8 +41,8 @@
 					</div>
 					<div class="notice-content">
 						<ul>
-							<li>请确认是否在进行重复提交，信息完全一样的机动车登记证是不可以重复提交的。</li>
-							<li>我们会对机动车登记证上面所识别出的若干信息进行检查，比如身份证号码，统一社会信用代码是否正确等，如果信息不正确是无法正常提交的。</li>
+							<li>请确认是否在进行重复提交，信息完全一样的机动车登记证是<span>不可以重复提交</span>的。</li>
+							<li>我们会对机动车登记证上面所识别出的若干信息进行检查，比如身份证号码，统一社会信用代码是否正确等，如果<span>信息不正确是无法正常提交的</span>。</li>
 						</ul>
 					</div>
 				</div>
