--- a/ipa/ipaDownload/index.html
+++ b/ipa/ipaDownload/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" data-find="_8"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <script charset="utf-8"></script>
     
-    <title>移动销售系统</title>
+    <title>测试ipa</title>
 
     <style>
         input, img, select {
